# elizaos-cpp

./: .gitignore  .gitignore.cpp  CMakeLists.txt  README.md  STATUS_REPORT.md  TECH_ARCHITECTURE.md  arc-cpp.prompt.yml  demo_stage4.cpp  demo_status  demo_status.cpp  improvabot41.prompt.yml  improvabot4o.prompt.yml  shell_demo  shell_demo.cpp
.github/workflows/: cpp-build.yml  cppissues.yml  defensive-session-logging.yml  fetch.yml  sync.yml
LiveVideoChat/: package-lock.json  package.json
agentcomms/: README.md
agentmemory/agentmemory/: chroma_client.py  client.py  main.py
autofun-idl/: README.md
autofun-idl/types/: raydium_vault.ts
autonomous-starter/: package.json
autonomous-starter/src/plugin-self-modification/: package.json
characterfile/: package-lock.json
cpp/agentaction/: CMakeLists.txt
cpp/agentaction/src/: agentaction.cpp  agentaction_old.cpp  placeholder.cpp
cpp/agentagenda/: CMakeLists.txt
cpp/agentagenda/src/: agentagenda.cpp  placeholder.cpp
cpp/agentbrowser/: CMakeLists.txt
cpp/agentbrowser/src/: placeholder.cpp
cpp/agentcomms/: CMakeLists.txt
cpp/agentcomms/src/: agentcomms.cpp  placeholder.cpp
cpp/agentlogger/: CMakeLists.txt
cpp/agentlogger/src/: agentlogger.cpp  placeholder.cpp
cpp/agentloop/: CMakeLists.txt
cpp/agentloop/src/: agentloop.cpp
cpp/agentmemory/: CMakeLists.txt
cpp/agentmemory/src/: agentmemory.cpp  attention.cpp  placeholder.cpp
cpp/agentshell/: CMakeLists.txt
cpp/agentshell/src/: agentshell.cpp  placeholder.cpp
cpp/auto_fun/: CMakeLists.txt
cpp/auto_fun/src/: placeholder.cpp
cpp/autofun_idl/: CMakeLists.txt
cpp/autofun_idl/src/: placeholder.cpp
cpp/autonomous_starter/: CMakeLists.txt
cpp/autonomous_starter/src/: placeholder.cpp
cpp/awesome_eliza/: CMakeLists.txt
cpp/awesome_eliza/src/: placeholder.cpp
cpp/brandkit/: CMakeLists.txt
cpp/brandkit/src/: placeholder.cpp
cpp/characterfile/: CMakeLists.txt
cpp/characterfile/src/: placeholder.cpp
cpp/characters/: CMakeLists.txt
cpp/characters/src/: placeholder.cpp
cpp/core/: CMakeLists.txt
cpp/core/src/: core.cpp
cpp/discord_summarizer/: CMakeLists.txt
cpp/discord_summarizer/src/: placeholder.cpp
cpp/discrub_ext/: CMakeLists.txt
cpp/discrub_ext/src/: placeholder.cpp
cpp/easycompletion/: CMakeLists.txt
cpp/easycompletion/src/: placeholder.cpp
cpp/eliza/: CMakeLists.txt
cpp/eliza/src/: placeholder.cpp
cpp/eliza_3d_hyperfy_starter/: CMakeLists.txt
cpp/eliza_3d_hyperfy_starter/src/: placeholder.cpp
cpp/eliza_nextjs_starter/: CMakeLists.txt
cpp/eliza_nextjs_starter/src/: placeholder.cpp
cpp/eliza_plugin_starter/: CMakeLists.txt
cpp/eliza_starter/: CMakeLists.txt
cpp/eliza_starter/src/: placeholder.cpp
cpp/elizaos_github_io/: CMakeLists.txt
cpp/elizaos_github_io/src/: placeholder.cpp
cpp/elizas_list/: CMakeLists.txt
cpp/elizas_list/src/: placeholder.cpp
cpp/elizas_world/: CMakeLists.txt
cpp/elizas_world/src/: placeholder.cpp
cpp/hat/: CMakeLists.txt
cpp/hats/: CMakeLists.txt
cpp/hats/src/: placeholder.cpp
cpp/knowledge/: CMakeLists.txt
cpp/knowledge/src/: placeholder.cpp
cpp/livevideochat/: CMakeLists.txt
cpp/livevideochat/src/: placeholder.cpp
cpp/ljspeechtools/: CMakeLists.txt
cpp/ljspeechtools/src/: placeholder.cpp
cpp/plugin_specification/: CMakeLists.txt
cpp/plugin_specification/src/: placeholder.cpp
cpp/plugins_automation/: CMakeLists.txt
cpp/plugins_automation/src/: placeholder.cpp
cpp/registry/: CMakeLists.txt
cpp/registry/src/: placeholder.cpp
cpp/spartan/: CMakeLists.txt
cpp/spartan/src/: placeholder.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test_agentaction.cpp  test_agentagenda.cpp  test_agentcomms.cpp  test_agentlogger.cpp  test_agentloop.cpp  test_agentmemory.cpp  test_attention_allocation.cpp  test_cognitive_primitives.cpp  test_core.cpp  test_livevideochat.cpp  test_ljspeechtools.cpp
cpp/the_org/: CMakeLists.txt
cpp/the_org/src/: placeholder.cpp
cpp/trust_scoreboard/: CMakeLists.txt
cpp/trust_scoreboard/src/: placeholder.cpp
cpp/vercel_api/: CMakeLists.txt
cpp/vercel_api/src/: placeholder.cpp
cpp/website/: CMakeLists.txt
cpp/website/src/: placeholder.cpp
cpp/workgroups/: CMakeLists.txt
cpp/workgroups/src/: placeholder.cpp
discrub-ext/: package-lock.json  package.json
docs/: BUILD.md  CPP_CONVERSION.md
eliza-3d-hyperfy-starter/: package.json
eliza-nextjs-starter/: package.json
eliza-plugin-starter/: pnpm-lock.yaml
eliza-starter/: package.json  pnpm-lock.yaml
elizas-list/: package-lock.json  package.json
elizas-world/: package-lock.json  package.json  pnpm-lock.yaml
examples/: CMakeLists.txt  README.md  cognitive_demo.cpp  demo.cpp  reasoning_demo.cpp
include/elizaos/: agentaction.hpp  agentagenda.hpp  agentcomms.hpp  agentlogger.hpp  agentloop.hpp  agentmemory.hpp  agentshell.hpp  attention.hpp  core.hpp  livevideochat.hpp  ljspeechtools.hpp
knowledge/the-council/aggregated/: 2025-04-18.json
plugins-automation/: package-lock.json  package.json
registry/site/: package-lock.json  package.json  pnpm-lock.yaml
spartan/: package.json
src/model/capi/: .gitignore  README.md  package-lock.json  package.json  sessions-client.test.ts  sessions-client.ts  tsconfig.json  workflow-utils.ts
the-org/: package.json
trust_scoreboard/: package-lock.json  package.json
vercel-api/: package-lock.json  package.json
vercel-api/app/api/catbox/: route.ts
